Added images, header and top of the page, background color and font

--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Favnime</title>
+   <title>The Waifu Project</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   
+   <div class="header">
+      <div class="logo"><img src="./images/pngwing.com.png" alt="An ol'Fashioned waifu" width="150px" height="150px"></div>
+      <div class="links">
+         <ul>
+            <li><a href="https://duckduckgo.com/?t=ffab&q=waifuland&iax=images&ia=images">Waifuland</a></li>
+            <li><a href="https://duckduckgo.com/?q=not+waifus&t=ffab&iar=images&iax=images&ia=images">NoWaifus</a></a></li>
+            <li><a href="https://duckduckgo.com/?q=besto+waifus&t=ffab&iar=images&iax=images&ia=images">Unknown</a></li>
+         </ul>
+      </div>
+   </div>
+   <div class="all">
+      <div class="top">   
+         <div class="content">
+          <div class="tittletop">The WAIFULAND</div>
+          <div class="info">Here i must put some info about the waifus but im really really "vago" in spanish so i hope you dont mind if I only tell you to image that here it is a good description</div>      
+          <button>Become member</button>
+         </div>
+         <img src="./images/wallpaper waifu.jpeg" alt="waifu wallpaper" width="400px" height="auto">
+      </div>
+      <div class="container">
+         <div class="tittlecontainer">Some randon waifus</div>
+         <div class="info">
+            <img src="./images/external-content.duckduckgo.com.jpeg" alt="cute waifu 1" width="200px" height="200px">
+            <div class="text">This is the best waifu</div>
+         </div>
+         <div class="info">
+            <img src="./images/2.jpeg" alt="cute waifu 2" width="200px" height="200px">
+            <div class="text">Well, also this one can be the best waifu</div>
+         </div>
+         <div class="info">
+            <img src="./images/3.jpeg" alt="cute waifu 3" width="200px" height="200px">
+            <div class="text">No, wait, maybe this one is the best</div>
+         </div>
+         <div class="info">
+            <img src="./images/4.jpeg" alt="cute waifu 4" width="200px" height="200px">
+            <div class="text">Hey, don't worry, we just need to choose wisely</div>
+         </div>
+      </div>
+      <div class="Quote">
+         <p>There is a lot of waifus around the internet, but there is only one for your heart...</p>
+         <i>Big Daddy</i>
+      </div>
+   </div>
+   <div class="footer">
+      The Waifu Project corp and The Odin Project
+   </div>
 </body>
 </html>
