last changes and touches to the flexbox project of odin. Base website done

--- a/index.html
+++ b/index.html
@@ -25,33 +25,41 @@
       <div class="top">   
          <div class="content">
           <div class="tittletop">The WAIFULAND</div>
-          <div class="info">Here i must put some info about the waifus but im really really "vago" in spanish so i hope you dont mind if I only tell you to image that here it is a good description</div>      
+          <div class="infotop">Here i must put some info about the waifus but im really really "vago" in spanish so i hope you dont mind if I only tell you to image that here it is a good description</div>      
           <button>Become member</button>
          </div>
          <img src="./images/wallpaper waifu.jpeg" alt="waifu wallpaper" width="400px" height="auto">
       </div>
+      <div class="tittlecontainer">SOME OF THE BEST WAIFUS</div>
       <div class="container">
-         <div class="tittlecontainer">Some randon waifus</div>
          <div class="info">
-            <img src="./images/external-content.duckduckgo.com.jpeg" alt="cute waifu 1" width="200px" height="200px">
-            <div class="text">This is the best waifu</div>
+            <img class="images" src="./images/external-content.duckduckgo.com.jpeg" alt="cute waifu 1" width="200px" height="200px">
+            <div class="text">The apparently peaceful waifu</div>
          </div>
          <div class="info">
-            <img src="./images/2.jpeg" alt="cute waifu 2" width="200px" height="200px">
-            <div class="text">Well, also this one can be the best waifu</div>
+            <img class="images" src="./images/2.jpeg" alt="cute waifu 2" width="200px" height="200px">
+            <div class="text">Random waifu from the internet</div>
          </div>
          <div class="info">
-            <img src="./images/3.jpeg" alt="cute waifu 3" width="200px" height="200px">
-            <div class="text">No, wait, maybe this one is the best</div>
+            <img class="images" src="./images/3.jpeg" alt="cute waifu 3" width="200px" height="200px">
+            <div class="text">Seems like shes going to flip your life around</div>
          </div>
          <div class="info">
-            <img src="./images/4.jpeg" alt="cute waifu 4" width="200px" height="200px">
-            <div class="text">Hey, don't worry, we just need to choose wisely</div>
+            <img class="images" src="./images/4.jpeg" alt="cute waifu 4" width="200px" height="200px">
+            <div class="text">Pinches pucheros, son taaaaaaan tiernos!!!!!</div>
          </div>
       </div>
-      <div class="Quote">
+      <div class="quote">
+         <span style="font-size:100px">❝</span><br>
          <p>There is a lot of waifus around the internet, but there is only one for your heart...</p>
-         <i>Big Daddy</i>
+         <i">-Big Daddy</i>
+      </div>
+      <div class="contact">
+         <div class="contact-tittle">CONTACT US NOW! BEST CHOICE OF YOUR LIFE</div>
+         <div class="contact-box">
+          <i>to go to a virtual reality where you will live happy forever with your waifu</i>       
+          <button>contact us!</button>
+         </div>   
       </div>
    </div>
    <div class="footer">
